--- a/css/main.css
+++ b/css/main.css
@@ -430,7 +430,7 @@ button {
   padding: 5px 15px;
   text-transform: capitalize;
   margin: 0 10px 10px 0;
-  border-radius: 50%;
+  border-radius: 30px;
 }
 .about-tabs {
   margin-top: 20px;
