--- a/css/main.css
+++ b/css/main.css
@@ -139,13 +139,19 @@ section.fade-out {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
   background-color: var(--white);
+  border-radius: 10px;
+  border: 1px solid var(--accend-color);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 ::-webkit-scrollbar-thumb {
-  color: var(--main-color);
+  background-color: var(--main-color);
+  border-radius: 10px;
+  border: 1px solid #aeaeb5;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 button {
   font-family: inherit;
