--- a/css/main.css
+++ b/css/main.css
@@ -634,46 +634,14 @@ button {
   color: var(--main-color);
 }
 /* contact */
-.contact-form,
 .contact-info {
-  width: 50%;
+  width: 100%;
   padding: 0 15px;
-}
-.contact-form .input-group {
-  width: 100%;
-  margin-bottom: 30px;
-}
-.contact-form .input-control::placeholder {
-  font-weight: 300;
-  color: var(--blue-dark);
-  opacity: 0.8;
-}
-.contact-form .input-control:focus {
-  border-color: var(--white-alpha-40);
-}
-.contact-form .input-control {
-  display: block;
-  width: 100%;
-  height: 50px;
-  border-radius: 30px;
-  border: none;
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  background-color: var(--white-alpha-25);
-  padding: 0 20px;
-  color: var(--blue-dark);
-  border: 1px solid transparent;
-  transition: border-color 0.3s ease;
-}
-.contact-form textarea.input-control {
-  height: 120px;
-  resize: none;
-  padding-top: 15px;
 }
 .contact-info-item {
   margin: 0 0 30px;
   padding: 0 0 0 20px;
+  text-align: center;
 }
 .contact-info-item h3 {
   font-size: 20px;
